JBR 2.0.6694 release