@@ -5,7 +5,7 @@ LABEL email="os@jetbrains.com"
 
 RUN apk --no-cache add curl fontconfig ttf-dejavu
 
-RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6685.jar
+RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6694.jar
 
 # JBR sessions should be located here
 RUN set -e && mkdir /jbr_sessions
@@ -18,4 +18,5 @@ VOLUME ["/jbr_logs"]
 EXPOSE 5000
 
 # JBR in server mode
-ENTRYPOINT java -Djava.awt.headless=true -jar jbr.jar --server --port 5000 --sessions /jbr_sessions --logs /jbr_logs
+ENTRYPOINT java --add-modules=jdk.incubator.vector -Djava.awt.headless=true \
+    -jar jbr.jar --server --port 5000 --sessions /jbr_sessions --logs /jbr_logs
